--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,9 @@
         <p>All Rights Reserved</p>
     </div>
     <div class="social_icons">
-        <a href="#"> <img src="img/footer_envelope.png" alt=""></a>
+        <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt=""></a>
         <a href="#"> <img src="img/footer_telegram.png" alt=""></a>
-        <a href="#"> <img src="img/footer_facebook.png" alt=""></a>
+        <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
     </div>
 </div>
     </footer>
