все дело в том что я ненавижу вим всей душой мы были рождены в разное время и место не люблю вим

--- a/app/index.html
+++ b/app/index.html
@@ -9,42 +9,120 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+<div class="logo_header">
+   <a href="index.html"><h2>Наталья Чижикова</h2></a> 
+    <h5>КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h5>
+</div>
 
-
-    <footer class="footer">
-    <div class="wrap_footer_head">
-        <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
-        <h5 class="wrap_footer_head_span">Здесь можно договориться о встрече или задать интересующий вас вопрос
-        </h5>
-    </div>
-
-
-
-        <div class="form_wrap">
-            <form action="index.php" method="post">
-                <div class="form_first_group">
-                <input type="text" name="name" placeholder="&#xf007; Ваше имя" required>
-                <input type="email" name="email" placeholder="&#xf0e0;   Ваша почта" required>
-                <input type="tel" name="telephone" placeholder="&#xf095;    Ваш номер" required>
-            </div>
-                <div class="form_wrap_text_wrap">
-                    <textarea name="purpouse" id="texta" cols="50" rows="8" placeholder="Тема обращения" required></textarea>
-                <input type="submit" value="отправить">
-                </div>
-            </form>
-        </div>
-<div class="footer_low_wrapper">
-    <div class="text_right">
-        <p> &copy; 2018 yakupoff  </p>
-        <p>All Rights Reserved</p>
-    </div>
-    <div class="social_icons">
-        <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt=""></a>
-        <a href="#"> <img src="img/footer_telegram.png" alt=""></a>
-        <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
+<nav class="navigation"> 
+    <ul>
+      <a href="about.html"><li>обо мне</li> </a>
+      <a href="psychotherapy.html"><li>о психотерапии </li></a>
+      <a href="method.html"><li> о подходе</li></a>
+      <a href="materials.html"><li> полезные материалы</li></a>
+      <a href="contacts.html"><li> контакты  </li></a>
+    </ul>
+</nav>
+<div class="wrapper_intro">
+    <div class="wrapper_intro__img"><img src="img/main_cliend_and_therapist.png" alt=""></div>
+    <div class="wrapper_intro__text">
+      <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
+      <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
     </div>
 </div>
-    </footer>
+<div class="wrapper_about_me">
+    <div class="wrapper_about_me__ava">
+        <img src="img/main_ava.png" alt="фотография Натальи Чижиковой">
+    </div>
+    <div class="wrapper_about_me__text">
+        <p>Я получила двойное психологическое образование: степень 
+                специалиста по направлению «Клиническая психология» в РНИМУ им. 
+                Н. И. Пирогова и степень бакалавра психологии по направлению 
+                «Социальная психология» в МПГУ (бывш. МГПИ им. В. И. Ленина). 
+                Защитила магистерскую диссертацию в МПГУ. </p>
+        <p>Дополнительно обучалась психологическому консультированию и 
+                психотерапии при Ассоциации когнитивно-поведенческой 
+                психотерапии, а также ДПДГ-терапии при Общероссийской 
+                профессиональной психотерапевтической лиге.</p>
+        <p>Действительный член Ассоциации когнитивно-поведенческой 
+                психотерапии, провожу как разовые консультации, так и 
+                долгосрочную терапию.</p>
+        <p>В своей работе я использую преимущественно техники 
+                когнитивно-поведенческой, гуманистической и экзистенциальной 
+                психотерапии. Консультирую взрослых и подростков.</p>
+    </div>
+</div>
+<div class="wrapper_reasons_to_me">
+    <h2>Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
+    <div class="wrapper_reasons_to_me_wrap">
+<div class="wrapper_reasons_to_me__card">
+    <div class="card_img"><img src="img/main_dark_thoughts.png" alt=""></div>
+     <p>Депрессивные состояния;
+        Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);
+        Панические атаки.
+    </p>
+</div>
+<div class="wrapper_reasons_to_me__card">
+    <div class="card_img"><img src="img/main_couple.png" alt=""></div>
+     <p>Трудности с построением близких 
+            и доверительных отношений;
+            Эмоциональная зависимость;
+            Болезненный разрыв отношений.
+    </p>
+</div>
+<div class="wrapper_reasons_to_me__card">
+    <div class="card_img"><img src="img/main_girls.png" alt=""></div>
+        Эмоциональная пустота, потеря 
+        смысла жизни, проблемы с 
+        самоопределением и поиском 
+        собственного пути, экзистенциальные 
+        вопросы.
+    </p>
+
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="footer">
+  <div class="wrap_footer_head">
+      <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
+      <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
+  </div>
+ <div class="form_wrap">
+  <form action="index.php" method="post">
+    <div class="form_first_group">
+      <input type="text" name="name" placeholder="&#xf007; Ваше имя" required>
+      <input type="email" name="email" placeholder="&#xf0e0;   Ваша почта" required>
+      <input type="tel" name="telephone" placeholder="&#xf095;    Ваш номер" required>
+    </div>
+    <div class="form_wrap_text_wrap">
+        <textarea name="purpouse" id="texta" cols="50" rows="8" placeholder="Тема обращения" required></textarea>
+        <input type="submit" value="отправить">
+    </div>
+  </form>
+</div>
+<div class="footer_low_wrapper">
+  <div class="text_right">
+      <p> &copy; 2018 yakupoff  </p>
+      <p>All Rights Reserved</p>
+  </div>
+  <div class="social_icons">
+      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt=""></a>
+      <a href="#"> <img src="img/footer_telegram.png" alt=""></a>
+      <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
+  </div>
+</div>
+</footer>
 </body>
 </html>
