только что дочитала мисими такая ерунда ужас

--- a/app/index.html
+++ b/app/index.html
@@ -53,34 +53,37 @@
     </div>
 </div>
 <div class="wrapper_reasons_to_me">
-    <h2>Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
+    <h2 class="wrapper_reasons_to_me__h2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
     <div class="wrapper_reasons_to_me_wrap">
 <div class="wrapper_reasons_to_me__card">
     <div class="card_img"><img src="img/main_dark_thoughts.png" alt=""></div>
-     <p>Депрессивные состояния;
-        Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);
-        Панические атаки.
-    </p>
+     
 </div>
 <div class="wrapper_reasons_to_me__card">
     <div class="card_img"><img src="img/main_couple.png" alt=""></div>
-     <p>Трудности с построением близких 
-            и доверительных отношений;
-            Эмоциональная зависимость;
-            Болезненный разрыв отношений.
-    </p>
+ 
 </div>
 <div class="wrapper_reasons_to_me__card">
     <div class="card_img"><img src="img/main_girls.png" alt=""></div>
-        Эмоциональная пустота, потеря 
-        смысла жизни, проблемы с 
-        самоопределением и поиском 
-        собственного пути, экзистенциальные 
-        вопросы.
-    </p>
 
-</div>
-</div>
+        </div>
+    </div>
+    <div class="wrapper_reasons_to_me_text">
+        <p>Депрессивные состояния;<br>
+            Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);<br>
+            Панические атаки.
+        </p>
+         <p>Трудности с построением близких и доверительных отношений;<br>
+            Эмоциональная зависимость;<br>
+            Болезненный разрыв отношений.<br>
+        </p>
+        <p>  Эмоциональная пустота, потеря 
+            смысла жизни, проблемы с 
+            самоопределением и поиском 
+            собственного пути, экзистенциальные 
+            вопросы.
+        </p>
+    </div>
 </div>
 
 
