--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="сайт психолога Натальи Чижиковой">
+    <meta name="keywords" content="психология, психотерапия, психологические проблемы, когнитивная психология, психолог Москва">
+    <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт психолога Наталья Чижиковой</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <script src="js/wow.js" defer></script>
+    <script src="js/code.js" defer></script>
 </head>
 <body>
-<div class="logo_header">
+<div class="logo_header wow fadeIn">
    <a href="index.html"><h2>Наталья Чижикова</h2></a> 
     <h5>КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h5>
 </div>
-
 <nav class="navigation"> 
     <ul>
       <a href="about.html"><li>обо мне</li> </a>
@@ -23,52 +29,56 @@
       <a href="contacts.html"><li> контакты  </li></a>
     </ul>
 </nav>
-<div class="wrapper_intro">
-    <div class="wrapper_intro__img"><img src="img/main_cliend_and_therapist.png" alt=""></div>
-    <div class="wrapper_intro__text">
+
+
+
+<!-- здесь начинается меняющийся контент -->
+<div class="wrapper_intro wow">
+    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt=""></div>
+    <div class="wrapper_intro__text wow slideInUp" data-wow-offset="5">
       <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
       <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
     </div>
 </div>
-<div class="wrapper_about_me">
-    <div class="wrapper_about_me__ava">
+<div class="wrapper_about_me wow">
+    <div class="wrapper_about_me__ava  wow slideInLeft" data-wow-offset="5">
         <img src="img/main_ava.png" alt="фотография Натальи Чижиковой">
     </div>
-    <div class="wrapper_about_me__text">
+    <div class="wrapper_about_me__text wow slideInRight" data-wow-offset="5">
         <p>Я получила двойное психологическое образование: степень 
-                специалиста по направлению «Клиническая психология» в РНИМУ им. 
-                Н. И. Пирогова и степень бакалавра психологии по направлению 
-                «Социальная психология» в МПГУ (бывш. МГПИ им. В. И. Ленина). 
-                Защитила магистерскую диссертацию в МПГУ. </p>
+           специалиста по направлению «Клиническая психология» в РНИМУ им. 
+           Н. И. Пирогова и степень бакалавра психологии по направлению 
+           «Социальная психология» в МПГУ (бывш. МГПИ им. В. И. Ленина). 
+           Защитила магистерскую диссертацию в МПГУ. </p>
         <p>Дополнительно обучалась психологическому консультированию и 
-                психотерапии при Ассоциации когнитивно-поведенческой 
-                психотерапии, а также ДПДГ-терапии при Общероссийской 
-                профессиональной психотерапевтической лиге.</p>
+           психотерапии при Ассоциации когнитивно-поведенческой 
+           психотерапии, а также ДПДГ-терапии при Общероссийской 
+           профессиональной психотерапевтической лиге.</p>
         <p>Действительный член Ассоциации когнитивно-поведенческой 
-                психотерапии, провожу как разовые консультации, так и 
-                долгосрочную терапию.</p>
+           психотерапии, провожу как разовые консультации, так и 
+           долгосрочную терапию.</p>
         <p>В своей работе я использую преимущественно техники 
-                когнитивно-поведенческой, гуманистической и экзистенциальной 
-                психотерапии. Консультирую взрослых и подростков.</p>
+           когнитивно-поведенческой, гуманистической и экзистенциальной 
+           психотерапии. Консультирую взрослых и подростков.</p>
     </div>
 </div>
 <div class="wrapper_reasons_to_me">
-    <h2 class="wrapper_reasons_to_me__h2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
+    <h2 class="wrapper_reasons_to_me__h2 wow fadeIn"  data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
     <div class="wrapper_reasons_to_me_wrap">
-<div class="wrapper_reasons_to_me__card">
+<div class="wrapper_reasons_to_me__card wow slideInLeft"  data-wow-offset="2">
     <div class="card_img"><img src="img/main_dark_thoughts.png" alt=""></div>
      
 </div>
-<div class="wrapper_reasons_to_me__card">
+<div class="wrapper_reasons_to_me__card wow slideInUp"  data-wow-offset="2">
     <div class="card_img"><img src="img/main_couple.png" alt=""></div>
  
 </div>
-<div class="wrapper_reasons_to_me__card">
+<div class="wrapper_reasons_to_me__card wow slideInUp" data-wow-offset="40">
     <div class="card_img"><img src="img/main_girls.png" alt=""></div>
 
         </div>
     </div>
-    <div class="wrapper_reasons_to_me_text">
+    <div class="wrapper_reasons_to_me_text wow fadeInUp">
         <p>Депрессивные состояния;<br>
             Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);<br>
             Панические атаки.
@@ -85,14 +95,6 @@
         </p>
     </div>
 </div>
-
-
-
-
-
-
-
-
 <!-- здесь индивидуальная часть сайта заканчивается -->
 
 
