fix alt with imgs

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 
 <!-- здесь начинается меняющийся контент -->
 <div class="wrapper_intro wow">
-    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt=""></div>
+    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt="клиент и психотерапевт"></div>
     <div class="wrapper_intro__text wow slideInUp" data-wow-offset="5">
       <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
       <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
@@ -66,15 +66,15 @@
     <h2 class="wrapper_reasons_to_me__h2 wow fadeIn"  data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
     <div class="wrapper_reasons_to_me_wrap">
 <div class="wrapper_reasons_to_me__card wow slideInLeft"  data-wow-offset="2">
-    <div class="card_img"><img src="img/main_dark_thoughts.png" alt=""></div>
+    <div class="card_img"><img src="img/main_dark_thoughts.png" alt="депрессивные мысли"></div>
      
 </div>
 <div class="wrapper_reasons_to_me__card wow slideInUp"  data-wow-offset="2">
-    <div class="card_img"><img src="img/main_couple.png" alt=""></div>
+    <div class="card_img"><img src="img/main_couple.png" alt="семейная пара с проблемами в отношениях"></div>
  
 </div>
 <div class="wrapper_reasons_to_me__card wow slideInUp" data-wow-offset="40">
-    <div class="card_img"><img src="img/main_girls.png" alt=""></div>
+    <div class="card_img"><img src="img/main_girls.png" alt="осуждение в обществе"></div>
 
         </div>
     </div>
@@ -122,8 +122,8 @@
       <p>All Rights Reserved</p>
   </div>
   <div class="social_icons">
-      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt=""></a>
-      <a href="#"> <img src="img/footer_telegram.png" alt=""></a>
+      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
+      <a href="#"> <img src="img/footer_telegram.png" alt="telegram"></a>
       <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
   </div>
 </div>
