--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
-    <meta name="keywords" content="психология, психотерапия, психологические проблемы, когнитивная психология, психолог Москва">
+    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -34,7 +34,7 @@
 
 <!-- здесь начинается меняющийся контент -->
 <div class="wrapper_intro wow">
-    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt="клиент и психотерапевт"></div>
+    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt="клиент и психотерапевт психолог"></div>
     <div class="wrapper_intro__text wow slideInUp" data-wow-offset="5">
       <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
       <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
@@ -42,7 +42,7 @@
 </div>
 <div class="wrapper_about_me wow">
     <div class="wrapper_about_me__ava  wow slideInLeft" data-wow-offset="5">
-        <img src="img/main_ava.png" alt="фотография Натальи Чижиковой">
+        <img src="img/main_ava.png" alt="фотография Натальи Чижиковой психолог">
     </div>
     <div class="wrapper_about_me__text wow slideInRight" data-wow-offset="5">
         <p>Я получила двойное психологическое образование: степень 
@@ -66,15 +66,15 @@
     <h2 class="wrapper_reasons_to_me__h2 wow fadeIn"  data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
     <div class="wrapper_reasons_to_me_wrap">
 <div class="wrapper_reasons_to_me__card wow slideInLeft"  data-wow-offset="2">
-    <div class="card_img"><img src="img/main_dark_thoughts.png" alt="депрессивные мысли"></div>
+    <div class="card_img"><img src="img/main_dark_thoughts.png" alt="депрессивные мысли психолог"></div>
      
 </div>
 <div class="wrapper_reasons_to_me__card wow slideInUp"  data-wow-offset="2">
-    <div class="card_img"><img src="img/main_couple.png" alt="семейная пара с проблемами в отношениях"></div>
+    <div class="card_img"><img src="img/main_couple.png" alt="семейная пара с проблемами в отношениях психолог"></div>
  
 </div>
 <div class="wrapper_reasons_to_me__card wow slideInUp" data-wow-offset="40">
-    <div class="card_img"><img src="img/main_girls.png" alt="осуждение в обществе"></div>
+    <div class="card_img"><img src="img/main_girls.png" alt="осуждение в обществе психолог"></div>
 
         </div>
     </div>
@@ -123,7 +123,7 @@
   </div>
   <div class="social_icons">
       <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
-      <a href="#"> <img src="img/footer_telegram.png" alt="telegram"></a>
+      <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
       <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
   </div>
 </div>
