--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <script src="js/code.js" defer></script>
 </head>
 <body>
-<div class="logo_header wow fadeIn">
+<div class="logo_header">
    <a href="index.html"><h2>Наталья Чижикова</h2></a> 
     <h5>КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h5>
 </div>
@@ -41,10 +41,10 @@
     </div>
 </div>
 <div class="wrapper_about_me wow">
-    <div class="wrapper_about_me__ava  wow slideInLeft" data-wow-offset="5">
+    <div class="wrapper_about_me__ava  wow fadeIn" data-wow-offset="5">
         <img src="img/main_ava.png" alt="фотография Натальи Чижиковой психолог">
     </div>
-    <div class="wrapper_about_me__text wow slideInRight" data-wow-offset="5">
+    <div class="wrapper_about_me__text">
         <p>Я получила двойное психологическое образование: степень 
            специалиста по направлению «Клиническая психология» в РНИМУ им. 
            Н. И. Пирогова и степень бакалавра психологии по направлению 
@@ -63,22 +63,22 @@
     </div>
 </div>
 <div class="wrapper_reasons_to_me">
-    <h2 class="wrapper_reasons_to_me__h2 wow fadeIn"  data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
+    <h2 class="wrapper_reasons_to_me__h2 "  data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно ко мне:</h2>
     <div class="wrapper_reasons_to_me_wrap">
-<div class="wrapper_reasons_to_me__card wow slideInLeft"  data-wow-offset="2">
+<div class="wrapper_reasons_to_me__card"  data-wow-offset="2">
     <div class="card_img"><img src="img/main_dark_thoughts.png" alt="депрессивные мысли психолог"></div>
      
 </div>
-<div class="wrapper_reasons_to_me__card wow slideInUp"  data-wow-offset="2">
+<div class="wrapper_reasons_to_me__card"  data-wow-offset="2">
     <div class="card_img"><img src="img/main_couple.png" alt="семейная пара с проблемами в отношениях психолог"></div>
  
 </div>
-<div class="wrapper_reasons_to_me__card wow slideInUp" data-wow-offset="40">
+<div class="wrapper_reasons_to_me__card" data-wow-offset="40">
     <div class="card_img"><img src="img/main_girls.png" alt="осуждение в обществе психолог"></div>
 
         </div>
     </div>
-    <div class="wrapper_reasons_to_me_text wow fadeInUp">
+    <div class="wrapper_reasons_to_me_text wow fadeIn">
         <p>Депрессивные состояния;<br>
             Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);<br>
             Панические атаки.
