--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,15 @@
 
 
 <!-- здесь начинается меняющийся контент -->
-<div class="wrapper_intro wow">
-    <div class="wrapper_intro__img wow SlideInUp" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt="клиент и психотерапевт психолог"></div>
-    <div class="wrapper_intro__text wow slideInUp" data-wow-offset="5">
+<div class="wrapper_intro">
+    <div class="wrapper_intro__img" data-wow-offset="5"><img src="img/main_cliend_and_therapist.png" alt="клиент и психотерапевт психолог"></div>
+    <div class="wrapper_intro__text">
       <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
       <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
     </div>
 </div>
-<div class="wrapper_about_me wow">
-    <div class="wrapper_about_me__ava  wow fadeIn" data-wow-offset="5">
+<div class="wrapper_about_me">
+    <div class="wrapper_about_me__ava">
         <img src="img/main_ava.png" alt="фотография Натальи Чижиковой психолог">
     </div>
     <div class="wrapper_about_me__text">
@@ -111,7 +111,7 @@
       <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
     </div>
     <div class="form_wrap_text_wrap">
-        <textarea name="message" id="texta" cols="50" rows="8" placeholder="Тема обращения" required></textarea>
+        <textarea name="message" id="texta" rows="8" placeholder="Тема обращения" required></textarea>
         <input type="submit" value="отправить">
     </div>
   </form>
