--- a/app/about.html
+++ b/app/about.html
@@ -32,7 +32,60 @@
 </nav>
 
 
+<div class="wrapper_about_me_first">
+    <h2 class="wrapper_about_me__h2">
+        Обо мне
+    </h2>
+    <p class="psy_in_our_life__p">
+        В данный момент я веду частную практику, работаю как клинический психолог и психотерапевт. В своей работе я использую 
+преимущественно техники когнитивно-поведенческой, гуманистической и экзистенциальной психотерапии. Являюсь 
+действительным членом Ассоциации когнитивно-поведенческой психотерапии, провожу как разовые консультации, так и 
+долгосрочную терапию. Консультирую взрослых и подростков.
+    </p>
+    <p class="psy_in_our_life__p">
+     Интерес к психологии у меня с детства. Сколько себя помню, мне всегда хотелось разобраться в чувствах человека: 
+почему мы так устроены, откуда у нас внутри такой богатый, огромный и сложный мир, как нам с ним сосуществовать?
+    </p>
+    <p class="psy_in_our_life__p">
+ На протяжении своего жизненного пути я присматривалась и к другим профессиям, но со временем осознала: прежде 
+чем ответить на вопрос, чем ты хочешь заниматься в жизни, нужно понять, чем ты не заниматься не можешь. Что 
+касается меня, то я никогда не переставала думать и говорить о том, как мы устроены.
+    </p>
+    <p class="psy_in_our_life__p">
+        Психотерапия покорила меня тем, что посвящена людям: они способны открыть для себя ранее не предполагаемые 
+        явления, найти ранее не осознаваемые ресурсы и говорить о том, что для них важно, настолько искренне, насколько 
+        это вообще возможно. 
+    </p>
 
+
+<h2 class="wrapper_about_me__h2">
+    Мое образование
+</h2>
+<p class="psy_in_our_life__p">
+    Получила двойное психологическое образование: степень специалиста по направлению «Клиническая психология» в 
+РНИМУ  им. Н. И. Пирогова и степень бакалавра психологии по направлению «Социальная психология» в МПГУ (бывш. 
+МГПИ им. В. И. Ленина). 
+</p>
+<p class="psy_in_our_life__p">Защитила магистерскую диссертацию в МПГУ (диплом с отличием). В рамках своего научного исследования стала 
+    победителем конкурса «Студенческая наука» (2016), а также XXIV Международной научной конференции студентов, 
+    аспирантов и молодых учёных «Ломоносов-2017» (МГУ) в номинации «Лучший доклад».</p>
+<p class="psy_in_our_life__p">Прошла двухлетнюю личную психотерапию у Антона Марковича Бурно, почётного члена Ассоциации когнитивно-
+    поведенческой психотерапии, руководителя модальности «Дифференциальная психотерапия» в Общероссийской 
+    профессиональной психотерапевтической лиге.</p>
+<p class="psy_in_our_life__p">Дополнительно обучалась психологическому консультированию и психотерапии у Дмитрия Викторовича Ковпака 
+    при Ассоциации когнитивно-поведенческой психотерапии, а также ДПДГ-терапии при Общероссийской 
+    профессиональной психотерапевтической лиге.</p>
+<p class="psy_in_our_life__p">В рамках профессиональной деятельности в качестве клинического психолога проходила стажировки и сотрудничала 
+    с больницами, учебными заведениями, благотворительными фондами, психологическими центрами, среди которых 
+    Научно-практический центр психического здоровья детей и подростков имени Г. Е. Сухаревой (НПЦ ПЗДП ДЗМ), 
+    Психиатрическая клиническая больница № 1 им. Н. А. Алексеева, Психоневрологический диспансер № 1, Центр 
+    патологии речи и нейрореабилитации, Наркологическая больница № 17, психологический центр «Родник», Московский 
+    педагогический государственный университет, ГБОУ СОШ № 1440.</p>
+<p class="psy_in_our_life__p">Предлагаю вам ознакомиться с моими дипломами, документирующими получение высшего и дополнительного 
+    образования, а также повышение квалификации, за исключением деятельности, которая не подразумевает выдачу 
+    сертификатов (личная терапия, исследовательские проекты в МГУ, РНИМУ им. Н. И. Пирогова, МПГУ, участие в 
+    супервизорских группах и пр.).</p>
+</div>
 <!-- здесь начинается меняющийся контент -->
 
 <!-- здесь индивидуальная часть сайта заканчивается -->
