--- a/app/method.html
+++ b/app/method.html
@@ -92,32 +92,26 @@
             Три основных принципа <br>
             когнитивно-поведенческой психотерапии:
         </h5>
-        <p class="method_three_methods__p">
-            — наши мысли влияют на наше поведение;
-        </p>
-        <p class="method_three_methods__p">
-            — мы можем развить навык отслеживания мыслей
-        </p>
-        <p class="method_three_methods__p"> и работать над их изменением; </p>
-        <p class="method_three_methods__p">— изменив мышление, можно изменить что-либо в поведении.        </p>
+        <ul>
+            <li>наши мысли влияют на наше поведение;</li>
+            <li>мы можем развить навык отслеживания мыслей;</li>
+            <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
+            <li>изменив мышление, можно изменить что-либо в поведении. </li>
+        </ul>
+
     </div>
     </div>
     <h5 class="method_wrapper_fourth__h5">
         Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий 
         подход в психотерапии:
     </h5>
-    <p class="method_three_methods__p">
-        — вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;
-    </p>
-<p class="method_three_methods__p">
-    — вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не устраивает;
-</p>
-<p class="method_three_methods__p">
-    — вы уже давно размышляете о проблеме и чувствуете необходимость её решения;
-</p>
-<p class="method_three_methods__p">
-     — вы любите думать и анализировать, вам нравится чёткость и ясность.
-</p>
+    <ul>
+        <li>вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
+        <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не устраивает; </li>
+        <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
+        <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
+    </ul>
+
 </div>
 <!-- здесь индивидуальная часть сайта заканчивается -->
 
