--- a/app/method.html
+++ b/app/method.html
@@ -92,7 +92,7 @@
             Три основных принципа <br>
             когнитивно-поведенческой психотерапии:
         </h5>
-        <ul>
+        <ul class="method_first__list">
             <li>наши мысли влияют на наше поведение;</li>
             <li>мы можем развить навык отслеживания мыслей;</li>
             <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
@@ -105,9 +105,9 @@
         Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий 
         подход в психотерапии:
     </h5>
-    <ul>
-        <li>вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
-        <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не устраивает; </li>
+    <ul class="method_second__list">
+        <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
+        <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не <br> <span> устраивает;</span> </li>
         <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
         <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
     </ul>
