--- a/app/about.html
+++ b/app/about.html
@@ -153,6 +153,37 @@
     </div>
     
 </div>
+<div class="academic_wrapper">
+        <hr color=>
+    <h5>Дипломы и сертификаты</h5>
+    <h6 class="base">Базовое образование</h6>
+
+
+    <div class="row_img">
+        <div class="row_img__first">
+           
+            <img src="img\about_diplom_bachelor.png" alt="диплом бакалавра">
+            <span class="row_img__first__span" >Базовое образование</span>
+            <span class="row_img_first_mpgu">МПГУ (бывш. МГПИ им. В. И. Ленина)</span>
+            <span class="row_img__first__span" >Получение квалификации «Социальный психолог», «Психолог». </span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\about_diplom_with_profession.png" alt="переквалификация">
+            <span class="img\about_diplom_with_profession.png" >Базовое образование</span>
+            <span class="row_img_first_mpgu">РНИМУ им. Н. И. Пирогова </span>
+            <span class="row_img__first__span" >Получение квалификации «Клинический психолог»</span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\about_magister.png" alt="диплом магистра">
+            <span class="row_img__first__span" >Базовое образование</span>
+            <span class="row_img_first_mpgu">МПГУ (бывш. МГПИ им. В. И. Ленина)</span>
+            <span class="row_img__first__span" >Получение квалификации «Магистр психологии»</span>
+        </div>
+    </div>
+
+
+
+</div>
 
 
 <!-- здесь начинается меняющийся контент -->
