--- a/app/materials.html
+++ b/app/materials.html
@@ -51,14 +51,21 @@
     подавленности, депрессия только в 40% случаев проходит сама, и то не полностью, нанося огромный урон психике.</p>
 <h5 class="psy_in_our_life__h5  first_head">Симптомы депрессии:</h5>
 <div class="wrapper_symptoms_depression">
-    <div class="wrapper_symptoms_depression__list">
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-    </div>
+    <ul class="method_first__list">
+        <li>подавленность</li>
+        <li>тоска</li>
+        <li>тревожность</li>
+        <li>потеря интереса к любимым занятиям;</li>
+        <li>чувство безнадёжности; </li>
+        <li>проблемы с концентрацией внимания</li>
+        <li>неуверенность в себе;</li>
+        <li>изменение аппетита;</li>
+        <li>ощущение бесполезности или излишней вины;</li>
+        <li>сонливость или бессонница;</li>
+        <li>непоседливость или медлительность;</li>
+        <li>упадок сил;</li>
+        <li>периодические суицидальные мысли.</li>
+    </ul>
     <div class="wrapper_symptoms_depressin__image">
         <img src="img/usefull_material_girl.png" alt="девушка в депрессии плачет">
     </div>
@@ -101,17 +108,17 @@
     <h5 class="psy_in_our_life__h5"> Есть ряд симптомов:</h5>
 
     <div class="wrapper_symptoms_anxious">
-        <div class="wrapper_sympotms_axious__list">
-        <p>— периодическое ощущение, что должно произойти что-то </p> <p>ужасное и вы не в силах это предотвратить; </p>
-        <p> — учащённое сердцебиение, чувство удушья, головокружение от </p> <p> беспокоящих мыслей;  </p>
-        <p>— навязчивые страхи, связанные с потерей близких, даже если </p> <p> на это нет никаких оснований; </p>
-        <p> — одна или несколько изолированных фобий, социофобия;  </p>
-        <p> —	страх смерти или ипохондрические мысли;  </p>
-        <p> —	страх толпы или одиночества;  </p>
-        <p> —	страх передвижения в транспорте;  </p>
-        <p>—	страх покраснения;  </p>
-        <p>  —	навязчивые мысли, действия и т. д. </p>
-    </div>
+        <ul class="method_first__list">
+        <li>периодическое ощущение, что должно произойти что-то ужасное и вы не в силах это предотвратить; </li>
+        <li> учащённое сердцебиение, чувство удушья, головокружение от беспокоящих мыслей;  </li>
+        <li>навязчивые страхи, связанные с потерей близких, даже если  на это нет никаких оснований; </li>
+        <li>одна или несколько изолированных фобий, социофобия;  </li>
+        <li>страх смерти или ипохондрические мысли;  </li>
+        <li>страх толпы или одиночества;  </li>
+        <li>страх передвижения в транспорте;  </li>
+        <li>страх покраснения;  </li>
+        <li>навязчивые мысли, действия и т. д. </li>
+        </ul>
     <div class="wrapper_sympotms_anxioux__image">
         <img src="img/useful_material_girl_with_crow.png" alt="девушка одолеваемая внутренними страхами">
     </div>
@@ -151,15 +158,15 @@
   </p>
 <h5 class="psy_in_our_life__h5">При панической атаке вы можете чувствовать:</h5>
 <div class="wrapper_sympotms_panic">
-<div class="wrapper_sympotms_panic__list">
-    <p>— недостаток кислорода;</p>
-    <p>— учащённое, а иногда даже слишком сильное </p> <p> сердцебиение;        </p>
-    <p>— звон в ушах;  </p>
-    <p>  — головокружение;        </p>
-    <p> — дрожь;  </p>
-    <p>— потливость;</p>
-    <p>— озноб, жар и т. д.</p>
-</div>
+<ul class="method_first__list">
+    <li>недостаток кислорода;</li>
+    <li>учащённое, а иногда даже слишком сильное  сердцебиение;</li>
+    <li>звон в ушах;  </li>
+    <li>головокружение;        </li>
+    <li>дрожь;  </li>
+    <li>потливость;</li>
+    <li>озноб, жар и т. д.</li>
+</ul>
 <div class="wrapper_sympotms_panic__image">
     <img src="img/useful_material_panic_attack.png" alt="девушка в депрессии">
 </div>
