--- a/app/method.html
+++ b/app/method.html
@@ -106,20 +106,12 @@
         подход в психотерапии:
     </h5>
     <div class="base">
-    <div class="method_second__list">
-        <pre>
-         — Обычное тире для сравнения.
-           Параграф. И он не переносится на другую строчку, как в предыдущем варианте.
-                
-         — Еще один параграф с отступами.
-                
-        —  Вложенный нумерованный список:
-        </pre>
+    <ul class="method_first__list">
         <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
         <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
         <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
         <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
-        </div>
+        </ul>
 </div>
 </div>
 <!-- здесь индивидуальная часть сайта заканчивается -->
